// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Yearly Simulation Golden Targeted Assertions > Scenario 1: Default Baseline 1`] = `
{
  "finalNetWorth": 780042.9184773634,
  "keyAgesLogs": {
    "35": {
      "age": 35,
      "childCosts": 0,
      "coastFireNumber": 338823.26425365976,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 42504,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 50000,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 4,
      "mortgageBalance": 0,
      "netWorth": 12495.999999999998,
      "portfolio": 12495.999999999998,
      "retirementReadyTarget": 0,
      "savings": 7495.999999999999,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "65": {
      "age": 65,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 81926.90473757044,
      "fiNumber": 2048172.6184392609,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 0,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 745650.8884383414,
      "portfolio": 745650.8884383414,
      "retirementReadyTarget": 2048172.6184392609,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 81926.90473757044,
    },
    "67": {
      "age": 67,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 86916.2532360885,
      "fiNumber": 627856.6774911447,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 61801.986136442705,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 703118.3445461877,
      "portfolio": 703118.3445461877,
      "retirementReadyTarget": 627856.6774911447,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 61801.986136442705,
      "taxes": 0,
      "withdrawals": 25114.26709964579,
    },
    "85": {
      "age": 85,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 147969.10306821688,
      "fiNumber": 1068883.9654811644,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 105213.7444489703,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 780042.9184773634,
      "portfolio": 780042.9184773634,
      "retirementReadyTarget": 1068883.9654811644,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 105213.7444489703,
      "taxes": 0,
      "withdrawals": 42755.358619246574,
    },
  },
  "logsLength": 51,
  "moneyLasts": true,
  "retirementReadyAge": 63,
  "runOutAge": null,
}
`;

exports[`Yearly Simulation Golden Targeted Assertions > Scenario 2: Retire Today 1`] = `
{
  "finalNetWorth": 780042.9184773634,
  "keyAgesLogs": {
    "35": {
      "age": 35,
      "childCosts": 0,
      "coastFireNumber": 338823.26425365976,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 42504,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 50000,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 4,
      "mortgageBalance": 0,
      "netWorth": 12495.999999999998,
      "portfolio": 12495.999999999998,
      "retirementReadyTarget": 0,
      "savings": 7495.999999999999,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "65": {
      "age": 65,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 81926.90473757044,
      "fiNumber": 2048172.6184392609,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 0,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 745650.8884383414,
      "portfolio": 745650.8884383414,
      "retirementReadyTarget": 2048172.6184392609,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 81926.90473757044,
    },
    "67": {
      "age": 67,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 86916.2532360885,
      "fiNumber": 627856.6774911447,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 61801.986136442705,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 703118.3445461877,
      "portfolio": 703118.3445461877,
      "retirementReadyTarget": 627856.6774911447,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 61801.986136442705,
      "taxes": 0,
      "withdrawals": 25114.26709964579,
    },
    "85": {
      "age": 85,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 147969.10306821688,
      "fiNumber": 1068883.9654811644,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 105213.7444489703,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 780042.9184773634,
      "portfolio": 780042.9184773634,
      "retirementReadyTarget": 1068883.9654811644,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 105213.7444489703,
      "taxes": 0,
      "withdrawals": 42755.358619246574,
    },
  },
  "logsLength": 51,
  "moneyLasts": true,
  "retirementReadyAge": 63,
  "runOutAge": null,
}
`;

exports[`Yearly Simulation Golden Targeted Assertions > Scenario 3: Social Security Enabled 1`] = `
{
  "finalNetWorth": 529633.1166267537,
  "keyAgesLogs": {
    "35": {
      "age": 35,
      "childCosts": 0,
      "coastFireNumber": 338823.26425365976,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 42504,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 50000,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 4,
      "mortgageBalance": 0,
      "netWorth": 12495.999999999998,
      "portfolio": 12495.999999999998,
      "retirementReadyTarget": 0,
      "savings": 7495.999999999999,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "62": {
      "age": 62,
      "childCosts": 0,
      "coastFireNumber": 2105401.6532076597,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 94413.61135765737,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 148382.10557208658,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 706486.1913802947,
      "portfolio": 706486.1913802947,
      "retirementReadyTarget": 0,
      "savings": 16659.657565933332,
      "shortfall": 0,
      "ssIncome": 37317.65529357866,
      "taxes": 0,
      "withdrawals": 0,
    },
    "65": {
      "age": 65,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 81926.90473757044,
      "fiNumber": 1028722.3805396028,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 40778.00951598633,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 906403.5467755634,
      "portfolio": 906403.5467755634,
      "retirementReadyTarget": 1028722.3805396028,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 40778.00951598633,
      "taxes": 0,
      "withdrawals": 41148.89522158411,
    },
    "85": {
      "age": 85,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 147969.10306821688,
      "fiNumber": 1857987.0488484416,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 73649.62111427922,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 529633.1166267537,
      "portfolio": 529633.1166267537,
      "retirementReadyTarget": 1857987.0488484416,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 73649.62111427922,
      "taxes": 0,
      "withdrawals": 74319.48195393766,
    },
  },
  "logsLength": 51,
  "moneyLasts": true,
  "retirementReadyAge": 64,
  "runOutAge": null,
}
`;

exports[`Yearly Simulation Golden Targeted Assertions > Scenario 4: House Purchase 1`] = `
{
  "finalNetWorth": 2055669.0612844424,
  "keyAgesLogs": {
    "35": {
      "age": 35,
      "childCosts": 0,
      "coastFireNumber": 338823.26425365976,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 42504,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 50000,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 4,
      "mortgageBalance": 0,
      "netWorth": 12495.999999999998,
      "portfolio": 12495.999999999998,
      "retirementReadyTarget": 0,
      "savings": 7495.999999999999,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "40": {
      "age": 40,
      "childCosts": 0,
      "coastFireNumber": 369560.8718616484,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 38318.614597020525,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 57963.703715,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 72544.85029163086,
      "portfolio": 72544.85029163086,
      "retirementReadyTarget": 0,
      "savings": 8694.548601611119,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "65": {
      "age": 65,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 72096.4917292523,
      "fiNumber": 1802412.2932313075,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 0,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 1261918.8010112583,
      "portfolio": 1261918.8010112583,
      "retirementReadyTarget": 1802412.2932313075,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 72096.4917292523,
    },
    "70": {
      "age": 70,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 83579.59370970659,
      "fiNumber": 401172.37011974904,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 67532.69890491663,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 1356481.1815187233,
      "portfolio": 1356481.1815187233,
      "retirementReadyTarget": 401172.37011974904,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 67532.69890491663,
      "taxes": 0,
      "withdrawals": 16046.894804789961,
    },
    "85": {
      "age": 85,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 130214.28369245314,
      "fiNumber": 625013.481087071,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 105213.7444489703,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 2055669.0612844424,
      "portfolio": 2055669.0612844424,
      "retirementReadyTarget": 625013.481087071,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 105213.7444489703,
      "taxes": 0,
      "withdrawals": 25000.53924348284,
    },
  },
  "logsLength": 51,
  "moneyLasts": true,
  "retirementReadyAge": 58,
  "runOutAge": null,
}
`;

exports[`Yearly Simulation Golden Targeted Assertions > Scenario 5: Child Event 1`] = `
{
  "finalNetWorth": 780042.9184773634,
  "keyAgesLogs": {
    "35": {
      "age": 35,
      "childCosts": 0,
      "coastFireNumber": 338823.26425365976,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 42504,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 50000,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 4,
      "mortgageBalance": 0,
      "netWorth": 12495.999999999998,
      "portfolio": 12495.999999999998,
      "retirementReadyTarget": 0,
      "savings": 7495.999999999999,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "45": {
      "age": 45,
      "childCosts": 0,
      "coastFireNumber": 666516.1109449795,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 57121.7760902217,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 67195.81896720611,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 5.321904604676092,
      "mortgageBalance": 0,
      "netWorth": 131924.23639877487,
      "portfolio": 131924.23639877487,
      "retirementReadyTarget": 0,
      "savings": 10074.042876984415,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "53": {
      "age": 53,
      "childCosts": 0,
      "coastFireNumber": 1145198.7704609828,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 72360.15694681533,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 85121.65306199522,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 6.741629529195052,
      "mortgageBalance": 0,
      "netWorth": 310290.58606528497,
      "portfolio": 310290.58606528497,
      "retirementReadyTarget": 0,
      "savings": 12761.496115179893,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "65": {
      "age": 65,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 81926.90473757044,
      "fiNumber": 2048172.6184392609,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 0,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 745650.8884383414,
      "portfolio": 745650.8884383414,
      "retirementReadyTarget": 2048172.6184392609,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 81926.90473757044,
    },
    "85": {
      "age": 85,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 147969.10306821688,
      "fiNumber": 1068883.9654811644,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 105213.7444489703,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 780042.9184773634,
      "portfolio": 780042.9184773634,
      "retirementReadyTarget": 1068883.9654811644,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 105213.7444489703,
      "taxes": 0,
      "withdrawals": 42755.358619246574,
    },
  },
  "logsLength": 51,
  "moneyLasts": true,
  "retirementReadyAge": 63,
  "runOutAge": null,
}
`;

exports[`Yearly Simulation Golden Targeted Assertions > Scenario 6: Marriage and Spouse Income 1`] = `
{
  "finalNetWorth": 11036648.008369757,
  "keyAgesLogs": {
    "35": {
      "age": 35,
      "childCosts": 0,
      "coastFireNumber": 338823.26425365976,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 42504,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 50000,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 4,
      "mortgageBalance": 0,
      "netWorth": 12495.999999999998,
      "portfolio": 12495.999999999998,
      "retirementReadyTarget": 0,
      "savings": 7495.999999999999,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "40": {
      "age": 40,
      "childCosts": 0,
      "coastFireNumber": 39132.27821475339,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 4057.503922590267,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 110131.0370585,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 141236.4009727711,
      "portfolio": 141236.4009727711,
      "retirementReadyTarget": 0,
      "savings": 16519.648603133486,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "62": {
      "age": 62,
      "childCosts": 0,
      "coastFireNumber": 173371.71353586996,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 7774.597097541208,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 211022.45552916505,
      "isCoastAchieved": true,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 4634157.979571606,
      "portfolio": 4634157.979571606,
      "retirementReadyTarget": 0,
      "savings": 31653.355001646334,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "65": {
      "age": 65,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 15655.648758175626,
      "fiNumber": 391391.2189543907,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 0,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 5472505.673187331,
      "portfolio": 5472505.673187331,
      "retirementReadyTarget": 391391.2189543907,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 15655.648758175626,
    },
    "85": {
      "age": 85,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 28275.843108179273,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 105213.7444489703,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 11036648.008369757,
      "portfolio": 11036648.008369757,
      "retirementReadyTarget": 0,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 105213.7444489703,
      "taxes": 0,
      "withdrawals": 0,
    },
  },
  "logsLength": 51,
  "moneyLasts": true,
  "retirementReadyAge": 41,
  "runOutAge": null,
}
`;

exports[`Yearly Simulation Golden Targeted Assertions > Scenario 7: Debts 1`] = `
{
  "finalNetWorth": 780042.9184773634,
  "keyAgesLogs": {
    "35": {
      "age": 35,
      "childCosts": 0,
      "coastFireNumber": 338823.26425365976,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 42504,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 50000,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 4,
      "mortgageBalance": 0,
      "netWorth": 12495.999999999998,
      "portfolio": 12495.999999999998,
      "retirementReadyTarget": 0,
      "savings": 7495.999999999999,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "40": {
      "age": 40,
      "childCosts": 0,
      "coastFireNumber": 475216.77550697356,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 49273.74583505053,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 57963.703715,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 4.590721661648786,
      "mortgageBalance": 0,
      "netWorth": 61589.71905360085,
      "portfolio": 61589.71905360085,
      "retirementReadyTarget": 0,
      "savings": 8689.957879949472,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "45": {
      "age": 45,
      "childCosts": 0,
      "coastFireNumber": 666516.1109449795,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 57121.7760902217,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 67195.81896720611,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 5.321904604676092,
      "mortgageBalance": 0,
      "netWorth": 131924.23639877487,
      "portfolio": 131924.23639877487,
      "retirementReadyTarget": 0,
      "savings": 10074.042876984415,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "65": {
      "age": 65,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 81926.90473757044,
      "fiNumber": 2048172.6184392609,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 0,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 745650.8884383414,
      "portfolio": 745650.8884383414,
      "retirementReadyTarget": 2048172.6184392609,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 81926.90473757044,
    },
    "85": {
      "age": 85,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 147969.10306821688,
      "fiNumber": 1068883.9654811644,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 105213.7444489703,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 780042.9184773634,
      "portfolio": 780042.9184773634,
      "retirementReadyTarget": 1068883.9654811644,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 105213.7444489703,
      "taxes": 0,
      "withdrawals": 42755.358619246574,
    },
  },
  "logsLength": 51,
  "moneyLasts": true,
  "retirementReadyAge": 63,
  "runOutAge": null,
}
`;

exports[`Yearly Simulation Golden Targeted Assertions > Scenario 8: No-Tax Mode 1`] = `
{
  "finalNetWorth": 780042.9184773634,
  "keyAgesLogs": {
    "35": {
      "age": 35,
      "childCosts": 0,
      "coastFireNumber": 338823.26425365976,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 42504,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 50000,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 4,
      "mortgageBalance": 0,
      "netWorth": 12495.999999999998,
      "portfolio": 12495.999999999998,
      "retirementReadyTarget": 0,
      "savings": 7495.999999999999,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 0,
    },
    "65": {
      "age": 65,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 81926.90473757044,
      "fiNumber": 2048172.6184392609,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 0,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 745650.8884383414,
      "portfolio": 745650.8884383414,
      "retirementReadyTarget": 2048172.6184392609,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 81926.90473757044,
    },
    "67": {
      "age": 67,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 86916.2532360885,
      "fiNumber": 627856.6774911447,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 61801.986136442705,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 703118.3445461877,
      "portfolio": 703118.3445461877,
      "retirementReadyTarget": 627856.6774911447,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 61801.986136442705,
      "taxes": 0,
      "withdrawals": 25114.26709964579,
    },
    "85": {
      "age": 85,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 147969.10306821688,
      "fiNumber": 1068883.9654811644,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 105213.7444489703,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 780042.9184773634,
      "portfolio": 780042.9184773634,
      "retirementReadyTarget": 1068883.9654811644,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 105213.7444489703,
      "taxes": 0,
      "withdrawals": 42755.358619246574,
    },
  },
  "logsLength": 51,
  "moneyLasts": true,
  "retirementReadyAge": 63,
  "runOutAge": null,
}
`;

exports[`Yearly Simulation Golden Targeted Assertions > Scenario 8: Tax Mode 1`] = `
{
  "finalNetWorth": -134274.03881015463,
  "keyAgesLogs": {
    "35": {
      "age": 35,
      "childCosts": 0,
      "coastFireNumber": 365278.7039231755,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 45964,
      "fiNumber": 0,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 50000,
      "isCoastAchieved": false,
      "isFI": true,
      "lifestyleGap": 3464,
      "mortgageBalance": 0,
      "netWorth": 9036,
      "portfolio": 9036,
      "retirementReadyTarget": 0,
      "savings": 4035.999999999999,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 3460,
      "withdrawals": 0,
    },
    "65": {
      "age": 65,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 81926.90473757044,
      "fiNumber": 2048172.6184392609,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 0,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 458278.25871310884,
      "portfolio": 458278.25871310884,
      "retirementReadyTarget": 2048172.6184392609,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 0,
      "taxes": 0,
      "withdrawals": 81926.90473757044,
    },
    "67": {
      "age": 67,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 0,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 92389.28730533517,
      "fiNumber": 764682.5292223115,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 61801.986136442705,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": 381062.1228271924,
      "portfolio": 381062.1228271924,
      "retirementReadyTarget": 764682.5292223115,
      "savings": 0,
      "shortfall": 0,
      "ssIncome": 61801.986136442705,
      "taxes": 5473.034069246674,
      "withdrawals": 27148.582476637028,
    },
    "85": {
      "age": 85,
      "childCosts": 0,
      "coastFireNumber": 0,
      "cumulativeShortfall": 134274.03881015463,
      "debtBalance": 0,
      "employerMatch": 0,
      "expenses": 151432.38882299548,
      "fiNumber": 1155466.1093506292,
      "hasHomeAccountingDebug": false,
      "hasNetWorthLedger": true,
      "hasNetWorthLedgerDebug": true,
      "homeEquity": 0,
      "homeValue": 0,
      "income": 105213.7444489703,
      "isCoastAchieved": false,
      "isFI": false,
      "lifestyleGap": 0,
      "mortgageBalance": 0,
      "netWorth": -134274.03881015463,
      "portfolio": 0,
      "retirementReadyTarget": 1155466.1093506292,
      "savings": 0,
      "shortfall": 46218.64437402518,
      "ssIncome": 105213.7444489703,
      "taxes": 3463.285754778606,
      "withdrawals": 0,
    },
  },
  "logsLength": 51,
  "moneyLasts": false,
  "retirementReadyAge": 66,
  "runOutAge": 83,
}
`;
